--- a/public/style.css
+++ b/public/style.css
@@ -28,6 +28,25 @@ body {
     margin-right: 15px;
 }
 
+.main-nav ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    background-color: #003366;
+}
+
+.main-nav li a {
+    display: block;
+    padding: 10px 20px;
+    color: rgb(15, 15, 15);
+    text-decoration: none;
+}
+
+.main-nav li a:hover {
+    background-color: #001a33;
+}
+
 /* =================================== */
 /* ARTICLE & BYLINE           */
 /* =================================== */
